--- a/aio.ipynb
+++ b/aio.ipynb
@@ -54,6 +54,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-10-14 21:43:07,519] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from model.MatchModel_generation import T5Model\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "model_dir = \"outputs/optimal_checkpoint\"\n",
+    "\n",
+    "model = T5Model.from_pretrained(model_dir)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jjwang/miniconda3/envs/nlp2/lib/python3.11/site-packages/transformers/generation/utils.py:1260: UserWarning: Using the model-agnostic default `max_length` (=20) to control thegeneration length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, they have the same meaning.\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"\"\"Are the following two sentences the same meaning?\n",
+    "He said the foodservice pie business doesn 't fit the company 's long-term growth strategy . The foodservice pie business does not fit our long-term growth strategy .\"\"\"\n",
+    "\n",
+    "inputs = tokenizer(text, return_tensors='pt')\n",
+    "outputs = model.generate(**inputs)\n",
+    "outputs = tokenizer.decode(outputs[0], skip_special_tokens=True)\n",
+    "print(outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
