--- a/aio.ipynb
+++ b/aio.ipynb
@@ -54,24 +54,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from model.MatchModel_binary_classification import RobertaModel_binary_classify\n",
+    "from transformers import AutoTokenizer,AutoConfig, AutoModel\n",
+    "\n",
+    "model_dir = \"outputs/optimal_checkpoint\"\n",
+    "\n",
+    "model_config = AutoConfig.from_pretrained(model_dir)\n",
+    "# model = AutoModel.from_config(model_config)\n",
+    "model = RobertaModel_binary_classify.from_pretrained(model_dir)\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3a43ad8ac7d4e33bb778a17391f38a6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3950]], grad_fn=<AddmmBackward0>)\n"
+     ]
     }
    ],
+   "source": [
+    "text = \"\"\"Are the following two sentences the same meaning?\n",
+    "He said the foodservice pie business doesn 't fit the company 's long-term growth strategy . The foodservice pie business does not fit our long-term growth strategy .\"\"\"\n",
+    "\n",
+    "inputs = tokenizer(text, return_tensors='pt')\n",
+    "outputs = model(**inputs)\n",
+    "print(outputs['logits'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from model.MatchModel_generation import T5Model\n",
     "from transformers import AutoTokenizer,AutoConfig, AutoModel\n",
@@ -86,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jjwang/miniconda3/envs/nlp2/lib/python3.11/site-packages/transformers/generation/utils.py:1260: UserWarning: Using the model-agnostic default `max_length` (=20) to control thegeneration length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
